--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Documentation of libs
 <li><a href=consoletest.html>consoletest.pm</a></li>
 <li><a href=containers/container_images.html>containers/container_images.pm</a></li>
 <li><a href=containers/engine.html>containers/engine.pm</a></li>
+<li><a href=containers/k8s.html>containers/k8s.pm</a></li>
 <li><a href=containers/utils.html>containers/utils.pm</a></li>
 <li><a href=data_integrity_utils.html>data_integrity_utils.pm</a></li>
 <li><a href=db_utils.html>db_utils.pm</a></li>
@@ -110,6 +111,7 @@ Documentation of libs
 <li><a href=suseconnect_register.html>suseconnect_register.pm</a></li>
 <li><a href=susedistribution.html>susedistribution.pm</a></li>
 <li><a href=thunderbird_common.html>thunderbird_common.pm</a></li>
+<li><a href=transactional.html>transactional.pm</a></li>
 <li><a href=trento.html>trento.pm</a></li>
 <li><a href=utils.html>utils.pm</a></li>
 <li><a href=validate_encrypt_utils.html>validate_encrypt_utils.pm</a></li>
