--- a/trento.html
+++ b/trento.html
@@ -21,14 +21,23 @@
         <ul>
           <li><a href="#get_trento_deployment">get_trento_deployment</a></li>
           <li><a href="#get_resource_group">get_resource_group</a></li>
+          <li><a href="#get_qesap_resource_group">get_qesap_resource_group</a></li>
+          <li><a href="#config_cluster">config_cluster</a></li>
+          <li><a href="#deploy_vm">deploy_vm</a></li>
+          <li><a href="#deploy_qesap">deploy_qesap</a></li>
+          <li><a href="#destroy_qesap">destroy_qesap</a></li>
           <li><a href="#get_vm_name">get_vm_name</a></li>
           <li><a href="#get_acr_name">get_acr_name</a></li>
           <li><a href="#get_trento_ip">get_trento_ip</a></li>
+          <li><a href="#get_vnet">get_vnet</a></li>
           <li><a href="#get_trento_password">get_trento_password</a></li>
           <li><a href="#az_delete_group">az_delete_group</a></li>
           <li><a href="#az_vm_ssh_cmd">az_vm_ssh_cmd</a></li>
+          <li><a href="#install_agent">install_agent</a></li>
+          <li><a href="#get_agents_number">get_agents_number</a></li>
           <li><a href="#k8s_logs">k8s_logs</a></li>
           <li><a href="#podman_self_check">podman_self_check</a></li>
+          <li><a href="#cypress_configs">cypress_configs</a></li>
           <li><a href="#cypress_install_container">cypress_install_container</a></li>
           <li><a href="#cypress_log_upload">cypress_log_upload</a></li>
           <li><a href="#cypress_exec">cypress_exec</a></li>
@@ -38,6 +47,7 @@
       </li>
     </ul>
   </li>
+  <li><a href="#POD-ERRORS">POD ERRORS</a></li>
 </ul><h1>lib/trento.pm</h1>
 
 <h1 id="NAME">NAME</h1>
@@ -58,6 +68,8 @@
 
 <h2 id="Methods">Methods</h2>
 
+<p>Clone gitlab.suse.de/qa-css/trento</p>
+
 <h3 id="get_trento_deployment">get_trento_deployment</h3>
 
 <p>Get the set of scripts for the Trento deployment</p>
@@ -65,6 +77,24 @@
 <h3 id="get_resource_group">get_resource_group</h3>
 
 <p>Return a string to be used as cloud resource group. It contains the JobId</p>
+
+<h3 id="get_qesap_resource_group">get_qesap_resource_group</h3>
+
+<p>Query and return the resource group used by the qe-sap-deployment</p>
+
+<h3 id="config_cluster">config_cluster</h3>
+
+<h3 id="deploy_vm">deploy_vm</h3>
+
+<p>Deploy the main VM for the Trento application Based on 00.040-trento_vm_server_deploy_azure.sh</p>
+
+<h3 id="deploy_qesap">deploy_qesap</h3>
+
+<p>Deploy a SAP Landscape using a previously configured qe-sap-deployment</p>
+
+<h3 id="destroy_qesap">destroy_qesap</h3>
+
+<p>Destroy the qe-sap-deployment SAP Landscape</p>
 
 <h3 id="get_vm_name">get_vm_name</h3>
 
@@ -77,6 +107,10 @@
 <h3 id="get_trento_ip">get_trento_ip</h3>
 
 <p>Return the running VM public IP</p>
+
+<h3 id="get_vnet">get_vnet</h3>
+
+<p>Return the output of az network vnet list</p>
 
 <h3 id="get_trento_password">get_trento_password</h3>
 
@@ -102,6 +136,34 @@
 </dd>
 </dl>
 
+<h3 id="install_agent">install_agent</h3>
+
+<p>Install trento-agent on all the nodes. Installation is performed using ansible.</p>
+
+<dl>
+
+<dt id="WORK_DIRECTORY---Working-directory-used-to-eventually-download-.rpm"><b>WORK_DIRECTORY</b> - Working directory, used to eventually download .rpm</dt>
+<dd>
+
+</dd>
+<dt id="PLAYBOOK---Playbook-location"><b>PLAYBOOK</b> - Playbook location</dt>
+<dd>
+
+</dd>
+<dt id="API_KEY---Api-key-needed-to-configure-trento-agent"><b>API_KEY</b> - Api key needed to configure trento-agent</dt>
+<dd>
+
+</dd>
+<dt id="PRIVATE_IP---Trento-server-private-IP-used-to-configure-server-url-in-agent"><b>PRIVATE_IP</b> - Trento server private IP, used to configure server-url in agent</dt>
+<dd>
+
+</dd>
+</dl>
+
+<h3 id="get_agents_number">get_agents_number</h3>
+
+<p>Get the number of SAP cluster nodes where the trento-agent has been installed</p>
+
 <h3 id="k8s_logs">k8s_logs</h3>
 
 <p>Get all relevant info out from the cluster</p>
@@ -121,6 +183,18 @@
 <h3 id="podman_self_check">podman_self_check</h3>
 
 <p>Perform some generic checks related to the podman installation itself and the relevant parameters of the current machine environment.</p>
+
+<h3 id="cypress_configs">cypress_configs</h3>
+
+<p>Prepare all the configuration files for cypress</p>
+
+<dl>
+
+<dt id="CYPRESS_TEST_DIR---Cypress-test-code-location"><b>CYPRESS_TEST_DIR</b> - Cypress test code location.</dt>
+<dd>
+
+</dd>
+</dl>
 
 <h3 id="cypress_install_container">cypress_install_container</h3>
 
@@ -194,6 +268,20 @@
 </dd>
 <dt id="TIMEOUT---Integer-used-as-timeout-for-the-internal-cypress_exec-call"><b>TIMEOUT</b> - Integer used as timeout for the internal <a>cypress_exec</a> call</dt>
 <dd>
+
+</dd>
+</dl>
+
+<h1 id="POD-ERRORS">POD ERRORS</h1>
+
+<p>Hey! <b>The above document had some coding errors, which are explained below:</b></p>
+
+<dl>
+
+<dt id="Around-line-98">Around line 98:</dt>
+<dd>
+
+<p>Unknown directive: =hean3</p>
 
 </dd>
 </dl>
