--- a/trento.html
+++ b/trento.html
@@ -40,6 +40,7 @@
           <li><a href="#k8s_logs">k8s_logs</a></li>
           <li><a href="#k8s_test">k8s_test</a></li>
           <li><a href="#trento_support">trento_support</a></li>
+          <li><a href="#trento_collect_scenarios">trento_collect_scenarios</a></li>
           <li><a href="#trento_api_key">trento_api_key</a></li>
           <li><a href="#cluster_print_cluster_status">cluster_print_cluster_status</a></li>
           <li><a href="#cluster_hdbadm">cluster_hdbadm</a></li>
@@ -49,7 +50,6 @@
           <li><a href="#cypress_configs">cypress_configs</a></li>
           <li><a href="#cypress_install_container">cypress_install_container</a></li>
           <li><a href="#cypress_log_upload">cypress_log_upload</a></li>
-          <li><a href="#cypress_version">cypress_version</a></li>
           <li><a href="#cypress_exec">cypress_exec</a></li>
           <li><a href="#cypress_test_exec">cypress_test_exec</a></li>
         </ul>
@@ -259,6 +259,10 @@
 
 <p>Call trento-support.sh and dump_scenario_from_k8.sh and upload the logs</p>
 
+<h3 id="trento_collect_scenarios">trento_collect_scenarios</h3>
+
+<p>Call dump_scenario_from_k8.sh and upload the logs</p>
+
 <h3 id="trento_api_key">trento_api_key</h3>
 
 <p>Get the api-key from the Trento installation</p>
@@ -299,14 +303,6 @@
 
 <p>Prepare whatever is needed to run cypress tests using container</p>
 
-<dl>
-
-<dt id="CYPRESS_VER---String-used-as-tag-for-the-cypress-included-image"><b>CYPRESS_VER</b> - String used as tag for the cypress/included image.</dt>
-<dd>
-
-</dd>
-</dl>
-
 <h3 id="cypress_log_upload">cypress_log_upload</h3>
 
 <p>Upload to openQA the relevant logs</p>
@@ -318,10 +314,6 @@
 
 </dd>
 </dl>
-
-<h3 id="cypress_version">cypress_version</h3>
-
-<p>Return the cypress.io version to use. It could be the default one or one fixed by the user using TRENTO_CYPRESS_VERSION</p>
 
 <h3 id="cypress_exec">cypress_exec</h3>
 
@@ -377,19 +369,19 @@
 
 <dl>
 
-<dt id="Around-line-99">Around line 99:</dt>
+<dt id="Around-line-103">Around line 103:</dt>
 <dd>
 
 <p>Unknown directive: =hean3</p>
 
 </dd>
-<dt id="Around-line-246">Around line 246:</dt>
+<dt id="Around-line-250">Around line 250:</dt>
 <dd>
 
 <p>&#39;=item&#39; outside of any &#39;=over&#39;</p>
 
 </dd>
-<dt id="Around-line-514">Around line 514:</dt>
+<dt id="Around-line-518">Around line 518:</dt>
 <dd>
 
 <p>&#39;=item&#39; outside of any &#39;=over&#39;</p>
