--- a/utils.html
+++ b/utils.html
@@ -93,6 +93,8 @@
       <li><a href="#detect_bsc_1063638">detect_bsc_1063638</a></li>
       <li><a href="#script_start_io">script_start_io</a></li>
       <li><a href="#script_finish_io">script_finish_io</a></li>
+      <li><a href="#handle_screen-handle_screen-needles-handler_map-assert-assert-max_loops-max_loops">handle_screen handle_screen($needles, $handler_map [, assert =&gt; $assert] [, max_loops =&gt; $max_loops] [...]);</a></li>
+      <li><a href="#define_secret_variable-define_secret_variable-var_name-var_value-define_secret_variable-sets-a-hidden-environment-variable-without-exposing-it-to-openQA.-This-function-is-useful-to-hide-secrets-from-openQA-by-setting-them-as-an-accessible-environment-variable-but-without-any-traces-in-the-output-terminals.-e.g.-define_secret_variable-SECRET-get_var-_SECRET_VARIABLE-would-store-the-openQA-variable-_SECRET_VARIABLE-into-the-SECRET-environment-variable-which-can-be-used-afterwards-by-using-SECRET">define_secret_variable define_secret_variable($var_name, $var_value); define_secret_variable sets a hidden environment variable without exposing it to openQA. This function is useful to hide secrets from openQA by setting them as an accessible environment variable, but without any traces in the output terminals. e.g. define_secret_variable(&#39;SECRET&#39;, get_var(&#39;_SECRET_VARIABLE&#39;)) would store the openQA variable &#39;_SECRET_VARIABLE&#39; into the &#39;$SECRET&#39; environment variable, which can be used afterwards by using $SECRET.</a></li>
     </ul>
   </li>
 </ul><h1>lib/utils.pm</h1>
@@ -529,6 +531,8 @@ zypper_ar(&#39;https://download.opensuse.org/repositories/devel:/kubic/openSUSE_
 
 <p><code>$delay</code> is the time between retries and defaults to <code>30</code>.</p>
 
+<p><code>$fail_message</code> is an optional error message in case of failure. Defaults to &quot;Waiting for Godot&quot;.</p>
+
 <p>The command must return within <code>$timeout</code> seconds (default: 25).</p>
 
 <p>If the command doesn&#39;t return <code>$expect</code> after <code>$retry</code> retries, this function will die, if <code>$die</code> is set.</p>
@@ -549,6 +553,8 @@ zypper_ar(&#39;https://download.opensuse.org/repositories/devel:/kubic/openSUSE_
 
 <p><code>$delay</code> is the time between retries and defaults to <code>30</code>.</p>
 
+<p><code>$fail_message</code> is an optional error message in case of failure. Defaults to &quot;Waiting for Godot&quot;.</p>
+
 <p>The command must return within <code>$timeout</code> seconds (default: 25).</p>
 
 <p>If the command doesn&#39;t return <code>$expect</code> after <code>$retry</code> retries, this function will die, if <code>$die</code> is set.</p>
@@ -566,6 +572,8 @@ zypper_ar(&#39;https://download.opensuse.org/repositories/devel:/kubic/openSUSE_
 <p><code>$retry</code> refers to the number of retries and defaults to <code>10</code>.</p>
 
 <p><code>$delay</code> is the time between retries and defaults to <code>30</code>.</p>
+
+<p><code>$fail_message</code> is an optional error message in case of failure. Defaults to &quot;Can&#39;t validate output after $retry retries&quot;.</p>
 
 <p>If the command doesn&#39;t succeed after <code>$retry</code> retries, this function will die.</p>
 
@@ -700,6 +708,18 @@ script_finish_io(exitcode =&gt; [12]);</code></pre>
 <pre><code>script_finish_io([timeout =&gt; $timeout] [, exitcode =&gt; undef]);</code></pre>
 
 <p>Finish interactive session started by <code>script_start_io()</code> and return command exit code. If <code>$exitcodes</code> is set, the command exit code must match one of the values in the given array, otherwise the current test will fail. <code>$timeout</code> controls how long to wait for the interactive command to exit. See <code>script_start_io()</code> for example usage.</p>
+
+<h2 id="handle_screen-handle_screen-needles-handler_map-assert-assert-max_loops-max_loops">handle_screen handle_screen($needles, $handler_map [, assert =&gt; $assert] [, max_loops =&gt; $max_loops] [...]);</h2>
+
+<p>Wait for <code>$needles</code> to appear on screen and then execute the appropriate handler function from <code>$handler_map</code> hash. <code>$needles</code> can be any value accepted by <code>assert_screen()</code> or <code>check_screen()</code>. <code>$assert</code> controls whether failed needle match should trigger test failure (when true, default) or just silently return (when false). <code>$max_loops</code> limits how many needle checks and handler calls can be done (default: count of <code>$needles</code>). Negative <code>$max_loops</code> means unlimited loop count. Any additional keyword arguments will be passed to <code>assert_screen()</code> or <code>check_screen()</code>.</p>
+
+<p><code>$handler_map</code> is a hashref in the format <code>{&quot;needle-tag&quot; =&gt; $handler}</code>. After a successful needle match, all needle tags in <code>$handler_map</code> will be checked and the matching needle must have exactly one of them. It is an error if the needle does not have exactly one handler in <code>$handler_map</code>.</p>
+
+<p><code>handle_screen()</code> will return after <code>$max_loops</code> iterations, or if a handler function returns any value that evaluates to true, or if needle match fails when <code>$assert</code> is false. The return value is the last value returned by a handler function, or undefined if needle match failed.</p>
+
+<p>Note that you may need to set <code>timeout</code> keyword argument if you set <code>$assert</code> to false because <code>check_screen()</code> has <code>$timeout=0</code> by default.</p>
+
+<h2 id="define_secret_variable-define_secret_variable-var_name-var_value-define_secret_variable-sets-a-hidden-environment-variable-without-exposing-it-to-openQA.-This-function-is-useful-to-hide-secrets-from-openQA-by-setting-them-as-an-accessible-environment-variable-but-without-any-traces-in-the-output-terminals.-e.g.-define_secret_variable-SECRET-get_var-_SECRET_VARIABLE-would-store-the-openQA-variable-_SECRET_VARIABLE-into-the-SECRET-environment-variable-which-can-be-used-afterwards-by-using-SECRET">define_secret_variable define_secret_variable($var_name, $var_value); define_secret_variable sets a hidden environment variable without exposing it to openQA. This function is useful to hide secrets from openQA by setting them as an accessible environment variable, but without any traces in the output terminals. e.g. define_secret_variable(&#39;SECRET&#39;, get_var(&#39;_SECRET_VARIABLE&#39;)) would store the openQA variable &#39;_SECRET_VARIABLE&#39; into the &#39;$SECRET&#39; environment variable, which can be used afterwards by using $SECRET.</h2>
 
 
 </body>
