--- a/qesapdeployment.html
+++ b/qesapdeployment.html
@@ -36,6 +36,7 @@
           <li><a href="#qesap_get_terraform_dir">qesap_get_terraform_dir</a></li>
           <li><a href="#qesap_get_ansible_roles_dir">qesap_get_ansible_roles_dir</a></li>
           <li><a href="#qesap_prepare_env">qesap_prepare_env</a></li>
+          <li><a href="#qesap_ansible_get_playbook">qesap_ansible_get_playbook</a></li>
           <li><a href="#qesap_ansible_cmd">qesap_ansible_cmd</a></li>
           <li><a href="#qesap_ansible_script_output_file">qesap_ansible_script_output_file</a></li>
           <li><a href="#qesap_ansible_script_output">qesap_ansible_script_output</a></li>
@@ -192,6 +193,26 @@ Execute qesap glue script commands. Check project documentation for available op
 https://github.com/SUSE/qe-sap-deployment
 Test only returns execution result, failure has to be handled by calling method.</code></pre>
 
+<dl>
+
+<dt id="CMD---qesap.py-subcommand-to-run"><b>CMD</b> - qesap.py subcommand to run</dt>
+<dd>
+
+</dd>
+<dt id="CMD_OPTIONS---set-of-arguments-for-the-qesap.py-subcommand"><b>CMD_OPTIONS</b> - set of arguments for the qesap.py subcommand</dt>
+<dd>
+
+</dd>
+<dt id="VERBOSE---activate-verbosity-in-qesap.py"><b>VERBOSE</b> - activate verbosity in qesap.py</dt>
+<dd>
+
+</dd>
+<dt id="TIMEOUT---max-expected-execution-time-back"><b>TIMEOUT</b> - max expected execution time =back</dt>
+<dd>
+
+</dd>
+</dl>
+
 <h3 id="qesap_ansible_log_find_timeout">qesap_ansible_log_find_timeout</h3>
 
 <pre><code>Return the Timeout error found in the Ansible log or not</code></pre>
@@ -227,6 +248,11 @@ Prepare terraform environment.
 
 For variables example see &#39;qesap_yaml_replace&#39;
 Returns only result, failure handling has to be done by calling method.</code></pre>
+
+<h3 id="qesap_ansible_get_playbook">qesap_ansible_get_playbook</h3>
+
+<pre><code>Download the playbook from the test code repo
+that is on the worker within the running JompHost.</code></pre>
 
 <h3 id="qesap_ansible_cmd">qesap_ansible_cmd</h3>
 
@@ -276,7 +302,7 @@ qesap_prepare_env(cmd=&gt;{string}, provider =&gt; &#39;aws&#39;);</code></pre>
 <pre><code>Use Ansible to run a command remotely and get the stdout.
 Command could be executed with elevated privileges
 
-qesap_ansible_script_output(cmd =&gt; &#39;crm status&#39;, provider =&gt; &#39;aws&#39;, host =&gt; &#39;vmhana01&#39;, root =&gt; 1);
+qesap_ansible_script_output_file(cmd =&gt; &#39;crm status&#39;, provider =&gt; &#39;aws&#39;, host =&gt; &#39;vmhana01&#39;, root =&gt; 1);
 
 It uses playbook data/sles4sap/script_output.yaml
 
@@ -322,6 +348,10 @@ remotely executed command.</code></pre>
 <dd>
 
 </dd>
+<dt id="TIMEOUT---max-expected-execution-time-default-180sec.-Same-timeout-is-used-both-for-the-execution-of-script_output.yaml-and-for-the-fetch_file.-Timeout-of-the-same-amount-is-started-two-times"><b>TIMEOUT</b> - max expected execution time, default 180sec. Same timeout is used both for the execution of script_output.yaml and for the fetch_file. Timeout of the same amount is started two times.</dt>
+<dd>
+
+</dd>
 <dt id="REMOTE_PATH---Path-to-save-file-in-the-remote-without-file-name"><b>REMOTE_PATH</b> - Path to save file in the remote (without file name)</dt>
 <dd>
 
@@ -355,6 +385,10 @@ remotely executed command.</code></pre>
 
 </dd>
 <dt id="FAILOK---if-not-set-Ansible-failure-result-in-die3"><b>FAILOK</b> - if not set, Ansible failure result in die</dt>
+<dd>
+
+</dd>
+<dt id="TIMEOUT---max-expected-execution-time"><b>TIMEOUT</b> - max expected execution time</dt>
 <dd>
 
 </dd>
@@ -413,6 +447,10 @@ Return the local path of the downloaded file.</code></pre>
 <dd>
 
 </dd>
+<dt id="TIMEOUT---max-expected-execution-time-default-180sec"><b>TIMEOUT</b> - max expected execution time, default 180sec</dt>
+<dd>
+
+</dd>
 <dt id="FILE---file-name-of-the-local-copy-of-the-file"><b>FILE</b> - file name of the local copy of the file</dt>
 <dd>
 
@@ -435,7 +473,7 @@ as required by the QE-SAP Terraform &amp; Ansible deployment code.</code></pre>
 <h3 id="qesap_remote_hana_public_ips">qesap_remote_hana_public_ips</h3>
 
 <pre><code>Return a list of the public IP addresses of the systems
-deployed by qesapdeployment, as reported by C&lt;terraform output&gt;.
+deployed by qe-sap-deployment, as reported by C&lt;terraform output&gt;.
 Needs to run after C&lt;qesap_execute(cmd =&gt; &#39;terraform&#39;);&gt; call.</code></pre>
 
 <h3 id="qesap_wait_for_ssh">qesap_wait_for_ssh</h3>
@@ -467,6 +505,14 @@ Return total time of retry loop in case of pass.</code></pre>
 <dl>
 
 <dt id="HOST---host-to-get-the-report-from"><b>HOST</b> - host to get the report from</dt>
+<dd>
+
+</dd>
+<dt id="PROVIDER---Cloud-provider-name-used-to-find-the-inventory4"><b>PROVIDER</b> - Cloud provider name, used to find the inventory</dt>
+<dd>
+
+</dd>
+<dt id="FAILOK---if-not-set-Ansible-failure-result-in-die-back"><b>FAILOK</b> - if not set, Ansible failure result in die =back</dt>
 <dd>
 
 </dd>
@@ -790,7 +836,19 @@ qesap_export_instances()</code></pre>
 
 <dl>
 
-<dt id="Around-line-998">Around line 998:</dt>
+<dt id="Around-line-429">Around line 429:</dt>
+<dd>
+
+<p>You forgot a &#39;=back&#39; before &#39;=head3&#39;</p>
+
+</dd>
+<dt id="Around-line-951">Around line 951:</dt>
+<dd>
+
+<p>You forgot a &#39;=back&#39; before &#39;=head3&#39;</p>
+
+</dd>
+<dt id="Around-line-1028">Around line 1028:</dt>
 <dd>
 
 <p>&#39;=item&#39; outside of any &#39;=over&#39;</p>
